--- a/client/css/app.css
+++ b/client/css/app.css
@@ -69,6 +69,9 @@ i {
         display: inline-block;
         border-top-left-radius: 6px;
         border-top-right-radius: 6px;
+        border-top: 1px solid var(--color1);
+        border-left: 1px solid var(--color1);
+        border-right: 1px solid var(--color1);
         transition: background-color var(--fade);
         &.active,
         &:hover {
@@ -208,5 +211,18 @@ button {
     width: 30em;
     font-size: 90%;
     display: block;
+    border: 1px solid var(--color1);
+    background-color: var(--color3);
+    margin: 2px;
+    border-radius: 4px;
+    transition: border-color var(--fade), background-color var(--fade);
+    &.error {
+      background-color: #efcbcf;
+      border-color: #e6b2b7;
+    }
+    &:focus,
+    &:hover {
+      border-color: var(--color4);
+    }
   }
 }
