--- a/client/css/app.css
+++ b/client/css/app.css
@@ -244,6 +244,42 @@ button {
   }
 }
 
+table.parameter-list {
+  text-align: left;
+  & th {
+    padding-right: 1em;
+  }
+}
+
+table.parameter-table {
+  border-spacing: 0;
+  text-align: left;
+
+  & th {
+    color: var(--color4);
+    border-bottom: 2px solid var(--color4);
+    margin: 0;
+    padding: 0.2em 0.5em;
+  }
+
+  & td {
+    margin: 0;
+    padding: 0.2em 0.5em;
+  }
+}
+
+.overview-dot {
+  & > svg {
+    margin-bottom: -0.125em;
+    margin-left: 0.2em;
+    margin-right: 0.2em;
+    & > circle {
+      stroke: var(--color5);
+      stroke-width: 0.08em;
+    }
+  }
+}
+
 .pie-chart {
   margin: 20px;
   text-align: center;
