Add sort to index pages

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -269,6 +269,7 @@ table.table {
   }
 
   & th {
+    white-space: nowrap;
     color: var(--color4);
     font-weight: bold;
     border-bottom: 2px solid var(--color4);
