Add horizontal scrollbar to index table

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -261,6 +261,8 @@ i {
 table.table {
   border-spacing: 0;
   text-align: left;
+  display: block;
+  overflow-x: auto;
 
   & table.table {
     font-size: 90%;
