--- a/client/css/app.css
+++ b/client/css/app.css
@@ -587,3 +587,19 @@ span.tag {
 .overlay > .put-form {
   min-width: 700px;
 }
+
+.autocomplete {
+  box-shadow: 0 0 10px #ccc;
+  background-color: rgba(255, 255, 255, 0.9);
+  border: 1px solid var(--color1);
+  border-radius: 4px;
+  max-height: 300px;
+  overflow-y: auto;
+  transition: opacity var(--fade);
+  & > .suggestion {
+    padding: 5px;
+    &:hover {
+      background-color: var(--color3);
+    }
+  }
+}
