Move autocomplete selection using up/down

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -638,6 +638,8 @@ span.tag {
   transition: opacity var(--fade);
   & > .suggestion {
     padding: 5px;
+
+    &.selected,
     &:hover {
       background-color: var(--color3);
     }
