--- a/ui/css/app.css
+++ b/ui/css/app.css
@@ -385,23 +385,17 @@ h1 {
   color: var(--color4);
   font-size: 130%;
   font-weight: bold;
-  margin-top: 1em;
-  margin-bottom: 0.5em;
 }
 
 h2 {
   color: var(--color5);
   font-weight: bold;
   font-size: 120%;
-  margin-top: 1em;
-  margin-bottom: 0.5em;
 }
 
 h3 {
   color: var(--color5);
   font-size: 110%;
-  margin-top: 1em;
-  margin-bottom: 0.5em;
 }
 
 p.error {
@@ -618,6 +612,7 @@ span.na {
 
 .actions-bar {
   margin-top: 10px;
+  margin-bottom: 10px;
   & > button {
     margin-right: 10px;
   }
